fixed recipe overflow

--- a/frontend/src/components/recipe/recipe.css
+++ b/frontend/src/components/recipe/recipe.css
@@ -16,6 +16,15 @@
   padding-top: 0px;
 }
 
+#saved-recipes {
+  overflow: hidden;
+  /* border: 1px solid red; */
+  height: 450px;
+  margin-bottom: 21px;
+
+}
+
+
 .recipe {
   display: flex;
   flex-direction: column;
